# potato_engine

./: .gitignore  CMakeLists.txt  README.md  README_BUILD.md  SDL_IMAGE_SETUP.md  SPIR-V)  build.bat  build_simple.bat  configure.bat  create_new_game.bat  run.bat
assets/shaders/: default_color_ps.hlsl  default_color_vs.hlsl  default_color_vs.spv
src/: main.cpp  main.h  new_script.cpp  triangle.cpp
src/engine/: potato-engine.cpp  potato-engine.h  potato-gameobject.cpp  potato-gameobject.h  potato-render.cpp  potato-render.h  potato-script-base.h  potato-script-registry.h  potato-structures.h  potato-texture.cpp  potato-texture.h  potato-utils.h  potato-vertex-buffer.cpp  potato-vertex-buffer.h
